--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -1,8 +1,9 @@
  body {
-   background-color: #f7f6f6;
+   background-color: #e9b2b2;
  }
 
  table thead {
    background-color: blueviolet;
    color: white;
  }
+ 
